--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bcrypt": "^4.0.1",
     "body-parser": "^1.13.3",
+    "connect-mongo": "^3.2.0",
     "express": "^4.13.4",
     "express-session": "^1.17.1",
     "mongoose": "^5.9.12",
